Fix h5p content overlap issue (#534)
Fixes https://github.com/pressbooks/pressbooks#1658

--- a/assets/src/styles/layouts/_reading.scss
+++ b/assets/src/styles/layouts/_reading.scss
@@ -109,6 +109,7 @@ h1.reading-header__title {
   @media #{$breakpoint-large} {
     display: flex;
     flex-direction: row;
+    z-index: 1;
   }
 }
 
